--- a/promedios.ipynb
+++ b/promedios.ipynb
@@ -22,11 +22,11 @@
    "source": [
     "#Modificar el año y las rutas para escribir los datos\n",
     "#El path para promedios diarios se encuentra casi al final\n",
-    "anio=\"2016\"\n",
-    "path_promedios=\"C:/path/a/promedioAnual\"+anio+\".csv\"\n",
-    "path_promedios_month=\"C:/path/a/promedioMensual\"+anio+\".csv\"\n",
-    "path_lista_puntos=\"C:/path/puntos/puntos_mar.npy\"\n",
-    "path_lista_puntos_islas=\"C:/path/puntos/puntos_islas.npy\"\n",
+    "anio=\"1998\"\n",
+    "path_promedios=\"C:\"+anio+\".csv\"\n",
+    "path_promedios_month=\"C:\"+anio+\".csv\"\n",
+    "path_lista_puntos=\"C:\"\n",
+    "path_lista_puntos_islas=\"C:\"\n",
     "\n",
     "#Ruta a datos en Dropbox\n",
     "carpeta_dropbox=\"Datos_NSRDB_Colombia/\"+anio\n",
@@ -54,16 +54,6 @@
     "    listaPuntosConcatSinRep.append(listaPuntosConcat[i])\n",
     "print(len(listaPuntosConcatSinRep))\n",
     "listaPuntos = listaPuntosConcatSinRep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Token para acceso a la carpeta de Dropbox - no es necesario modificarlo\n",
-    "dbx = dropbox.Dropbox('W3s3A8m5DCAAAAAAAAAAYJJbBNEO5yZthmR6Cju3UvMvNfW_S6m15HgdZKIyNgSB')"
    ]
   },
   {
